--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,13 @@
   	<title>Guy Colin - Artiste peintre</title>
     <!-- CSS imports -->
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/animate.css"/>
+    <link rel="stylesheet" href="css/animations.css"/>
     <link rel="stylesheet" href="css/responsive.css"/>
   </head>
   <body>
   	  <!-- Top/Right corner image -->
-	  <img class="img-responsive top-corner" src="img/fixed_corner2.png"/>
+	  <img class="img-responsive top-corner" src="img/fixed_corner.png"/>
 	  <!-- Menu -->
 	  <div id="navigation_container">
 	  	  <div class="rectangle">
@@ -26,10 +28,21 @@
 	  	   </div>
 	  	   <div class="r-triangle"></div>
 	  </div>
+	  
 	  <!-- Main contenair - Home of angular views -->
-	  <div class="container">
-		<div ng-view></div>
+	  <div class="container view-container">
+		<div ng-view class="view-frame"></div>
+		<div class="push"></div>
 	  </div>
+	  
+	  <!-- Sticky footer -->
+	  <footer>
+	  	<div class="flag-container">
+		    <img class="flag" src="img/french.png"/> 
+			<img class="flag" src="img/english.png"/>
+		</div>
+	  	© 2014 GUY COLIN
+	  </footer>
 		
 	  <!-- JS imports -->
 	  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -42,6 +55,5 @@
 	  <script src="js/controllers.js"></script>
 	  <script src="js/filters.js"></script>
 	  <script src="js/directives.js"></script>
-	  <script src="js/animations.js"></script>
   </body>
 </html>
