--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,15 @@
   <body>
   	  <!-- Top/Right corner image -->
 	  <img class="img-responsive top-corner" src="img/fixed_corner.png"/>
-	  <!-- Menu -->
-	  <div id="navigation_container" class="menu" my-menu="main"></div>
+	  <!-- Main-Menu -->
+	  <div id="navigation_container" class="menu">
+	  	<my-menu my-menu-items="menuItems" my-menu-current="currentMenuItem"></my-menu>
+	  </div>
+
+	  <!-- Sub-Menu -->
+	  <div id="navigation_sub_container" class="menu">
+	  	<my-sub-menu my-menu-items="subMenuItems" my-menu-current="currentSubMenuItem"></my-menu>
+	  </div>
 	  
 	  <!-- Main contenair - Home of angular views -->
 	  <div class="container view-container">
