--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta name="keywords" content="">
   	<title>{{ 'page.title' | translate }}</title>
     <!-- CSS imports -->
-    <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="css/animate.css"/>
-    <link rel="stylesheet" href="css/animations.css"/>
-    <link rel="stylesheet" href="css/responsive.css"/>
+    <link rel="stylesheet" href="app/css/app.css"/>
+    <link rel="stylesheet" href="app/css/animate.css"/>
+    <link rel="stylesheet" href="app/css/animations.css"/>
+    <link rel="stylesheet" href="app/css/responsive.css"/>
     <!-- Fonts import -->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
   </head>
   <body>
   	  <!-- Top/Right corner image -->
-	  <img class="img-responsive top-corner" src="img/fixed_corner.png"/>
+	  <img class="img-responsive top-corner" src="app/img/fixed_corner.png"/>
 	  
 	  <!-- Main-Menu -->
 	  <div id="navigation_container" class="menu">
@@ -42,16 +42,16 @@
 	  </footer>
 		
 	  <!-- JS imports -->
-	  <script src="lib/underscore/underscore-min.js"></script>
-	  <script src="lib/angular/angular.js"></script>
-	  <script src="lib/angular/angular-route.js"></script>
-	  <script src="lib/angular/angular-animate.js"></script>
-	  <script src="lib/angular-translate/angular-translate.min.js"></script>
-	  <script src="i18n/labels.js"></script>
-	  <script src="js/app.js"></script>
-	  <script src="js/services.js"></script>
-	  <script src="js/controllers.js"></script>
-	  <script src="js/filters.js"></script>
-	  <script src="js/directives.js"></script>
+	  <script src="app/lib/underscore/underscore-min.js"></script>
+	  <script src="app/lib/angular/angular.js"></script>
+	  <script src="app/lib/angular/angular-route.js"></script>
+	  <script src="app/lib/angular/angular-animate.js"></script>
+	  <script src="app/lib/angular-translate/angular-translate.min.js"></script>
+	  <script src="app/i18n/labels.js"></script>
+	  <script src="app/js/app.js"></script>
+	  <script src="app/js/services.js"></script>
+	  <script src="app/js/controllers.js"></script>
+	  <script src="app/js/filters.js"></script>
+	  <script src="app/js/directives.js"></script>
   </body>
 </html>
